--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,9 @@
     <uses-permission android:name="android.permission.READ_COMPAT_CHANGE_CONFIG" />
 
     <application android:label="@string/calendar_storage"
-                 android:allowBackup="false"
+                 android:allowBackup="true"
+                 android:dataExtractionRules="@xml/data_extraction_rules"
+                 android:fullBackupOnly="true"
                  android:icon="@drawable/app_icon"
                  android:forceQueryable="true"
                  android:usesCleartextTraffic="false">
